Fixed offer overflow issue

--- a/src/main/resources/static/css/offerDecor.css
+++ b/src/main/resources/static/css/offerDecor.css
@@ -1,10 +1,10 @@
-body{
+body {
     margin: 0;
     font-family: system-ui;
     background-image: url("img_4.png");
 }
 
-p{
+p {
     margin: auto;
     margin-top: 25px;
     margin-bottom: 10px;
@@ -13,7 +13,8 @@ p{
     text-align: center;
     font-size: x-large;
 }
-#detailsPage{
+
+#detailsPage {
     display: flex;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -32,6 +33,8 @@ p{
     background: #2A2A2A;
     padding: 20px 3px;
     border-radius: 40px;
+    max-width: 100vw;
+    overflow-wrap: break-word;
 }
 
 .offerInfo {
@@ -47,7 +50,7 @@ p{
     font-size: 40px;
     letter-spacing: 0px;
     word-spacing: 0px;
-    color:aqua;
+    color: aqua;
     font-weight: 400;
     text-align: center;
     text-decoration: none;
@@ -56,11 +59,13 @@ p{
     text-transform: none;
     font-variant-position: normal;
 }
-.lebStyle{
+
+.lebStyle {
     margin: auto;
     color: aqua;
 }
-.aStyle{
+
+.aStyle {
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -76,9 +81,11 @@ p{
     font-variant: normal;
     text-transform: none;
 }
-.aStyle:hover{
+
+.aStyle:hover {
     color: white;
 }
+
 .divStyle {
     margin: auto;
     margin-top: 10px;
@@ -96,28 +103,33 @@ p{
     text-transform: none;
 }
 
-.styleButton{
+.actionBtn {
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
     display: inline-block;
-    padding: 8px 20px;
-    font-size: 22px;
+    /*position: initial;*/
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    padding: 5px;
+    font-size: 15px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
     color: black;
+    width: 120px;
     background-color: white;
     border: 2px solid #e7e7e7;
-    border-radius: 15px;
+    border-radius: 20px;
     box-shadow: 0 9px #999;
-    margin-top: 5px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
 }
-.styleButton:hover {
-    background-color: lightcyan;
+
+.actionBtn:hover {
+    background-color: aqua;
     color: black;
 }
-.styleButton:active {
-    background-color: darkcyan;
+
+.actionBtn:active {
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
